@@ -19,10 +19,9 @@
  */
 package org.xwiki.notifications.filters.script;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 
 import javax.inject.Named;
 
@@ -96,22 +95,22 @@ class NotificationFiltersScriptServiceTest
         NotificationFilter filter4 = mock(NotificationFilter.class);
         NotificationFilter filter5 = mock(NotificationFilter.class);
 
-        Collection<NotificationFilter> currentUserFilters = Arrays.asList(filter1, filter2, filter3);
+        Collection<NotificationFilter> currentUserFilters = List.of(filter1, filter2, filter3);
         when(this.notificationFilterManager.getAllFilters(this.currentUserDocumentReference, false))
             .thenReturn(currentUserFilters);
 
-        Collection<NotificationFilter> currentUserToggleableFilters = Arrays.asList(filter1, filter3);
+        Collection<NotificationFilter> currentUserToggleableFilters = List.of(filter1, filter3);
         when(this.notificationFilterManager.getToggleableFilters(currentUserFilters))
             .thenReturn(currentUserToggleableFilters.stream());
 
         assertEquals(new HashSet<>(currentUserToggleableFilters),
             this.scriptService.getToggleableNotificationFilters());
 
-        Collection<NotificationFilter> otherUserFilters = Arrays.asList(filter3, filter4, filter5);
+        Collection<NotificationFilter> otherUserFilters = List.of(filter3, filter4, filter5);
         when(this.notificationFilterManager.getAllFilters(this.userDocumentReference, false))
             .thenReturn(otherUserFilters);
 
-        Collection<NotificationFilter> otherUserToggleableFilters = Collections.singletonList(filter3);
+        Collection<NotificationFilter> otherUserToggleableFilters = List.of(filter3);
         when(this.notificationFilterManager.getToggleableFilters(otherUserFilters))
             .thenReturn(otherUserToggleableFilters.stream());
         assertEquals(new HashSet<>(otherUserToggleableFilters),
@@ -125,10 +124,10 @@ class NotificationFiltersScriptServiceTest
         NotificationFilter filter2 = mock(NotificationFilter.class);
         NotificationFilter filter3 = mock(NotificationFilter.class);
 
-        Collection<NotificationFilter> wikiFilters = Arrays.asList(filter1, filter2, filter3);
+        Collection<NotificationFilter> wikiFilters = List.of(filter1, filter2, filter3);
         when(this.notificationFilterManager.getAllFilters(this.wikiReference)).thenReturn(wikiFilters);
 
-        Collection<NotificationFilter> wikiToggleableFilters = Arrays.asList(filter1, filter3);
+        Collection<NotificationFilter> wikiToggleableFilters = List.of(filter1, filter3);
         when(this.notificationFilterManager.getToggleableFilters(wikiFilters))
             .thenReturn(wikiToggleableFilters.stream());
 
@@ -145,14 +144,14 @@ class NotificationFiltersScriptServiceTest
         NotificationFilter filter4 = mock(NotificationFilter.class);
         NotificationFilter filter5 = mock(NotificationFilter.class);
 
-        Collection<NotificationFilter> currentUserFilters = Arrays.asList(filter1, filter2, filter3);
+        Collection<NotificationFilter> currentUserFilters = List.of(filter1, filter2, filter3);
         when(this.notificationFilterManager.getAllFilters(this.currentUserDocumentReference, false))
             .thenReturn(currentUserFilters);
 
 
         assertEquals(currentUserFilters, this.scriptService.getFilters());
 
-        Collection<NotificationFilter> otherUserFilters = Arrays.asList(filter3, filter4, filter5);
+        Collection<NotificationFilter> otherUserFilters = List.of(filter3, filter4, filter5);
         when(this.notificationFilterManager.getAllFilters(this.userDocumentReference, false))
             .thenReturn(otherUserFilters);
         assertEquals(otherUserFilters, this.scriptService.getFilters(this.userReference));
@@ -165,7 +164,7 @@ class NotificationFiltersScriptServiceTest
         NotificationFilter filter2 = mock(NotificationFilter.class);
         NotificationFilter filter3 = mock(NotificationFilter.class);
 
-        Collection<NotificationFilter> wikiFilters = Arrays.asList(filter1, filter2, filter3);
+        Collection<NotificationFilter> wikiFilters = List.of(filter1, filter2, filter3);
         when(this.notificationFilterManager.getAllFilters(this.wikiReference)).thenReturn(wikiFilters);
 
         assertEquals(wikiFilters, this.scriptService.getWikiFilters(this.wikiReference));
@@ -183,22 +182,22 @@ class NotificationFiltersScriptServiceTest
         NotificationFilter filter = mock(NotificationFilter.class);
 
         Collection<NotificationFilterPreference> currentUserFiltersPref =
-            Arrays.asList(filterPref1, filterPref2, filterPref3);
+            List.of(filterPref1, filterPref2, filterPref3);
         when(this.notificationFilterPreferenceManager.getFilterPreferences(this.currentUserDocumentReference))
             .thenReturn(currentUserFiltersPref);
 
-        Collection<NotificationFilterPreference> filteredCurrentUserPref = Arrays.asList(filterPref1, filterPref3);
+        Collection<NotificationFilterPreference> filteredCurrentUserPref = List.of(filterPref1, filterPref3);
         when(this.notificationFilterPreferenceManager.getFilterPreferences(currentUserFiltersPref, filter))
             .thenReturn(filteredCurrentUserPref.stream());
 
         assertEquals(new HashSet<>(filteredCurrentUserPref), this.scriptService.getFilterPreferences(filter));
 
         Collection<NotificationFilterPreference> otherUserFiltersPref =
-            Arrays.asList(filterPref3, filterPref4, filterPref5);
+            List.of(filterPref3, filterPref4, filterPref5);
         when(this.notificationFilterPreferenceManager.getFilterPreferences(this.userDocumentReference))
             .thenReturn(otherUserFiltersPref);
 
-        Collection<NotificationFilterPreference> filteredOtherUserPref = Collections.singletonList(filterPref3);
+        Collection<NotificationFilterPreference> filteredOtherUserPref = List.of(filterPref3);
         when(this.notificationFilterPreferenceManager.getFilterPreferences(otherUserFiltersPref, filter))
             .thenReturn(filteredOtherUserPref.stream());
         assertEquals(new HashSet<>(filteredOtherUserPref),
@@ -215,11 +214,11 @@ class NotificationFiltersScriptServiceTest
         NotificationFilter filter = mock(NotificationFilter.class);
 
         Collection<NotificationFilterPreference> wikiFilterPrefs =
-            Arrays.asList(filterPref1, filterPref2, filterPref3);
+            List.of(filterPref1, filterPref2, filterPref3);
         when(this.notificationFilterPreferenceManager.getFilterPreferences(this.wikiReference))
             .thenReturn(wikiFilterPrefs);
 
-        Collection<NotificationFilterPreference> filteredWikiPrefs = Collections.singletonList(filterPref2);
+        Collection<NotificationFilterPreference> filteredWikiPrefs = List.of(filterPref2);
         when(this.notificationFilterPreferenceManager.getFilterPreferences(wikiFilterPrefs, filter))
             .thenReturn(filteredWikiPrefs.stream());
         assertEquals(new HashSet<>(filteredWikiPrefs),
