@@ -19,8 +19,6 @@
  */
 package org.xwiki.notifications.preferences.script;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -56,7 +54,6 @@ import org.xwiki.user.internal.document.DocumentUserReference;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
@@ -127,7 +124,7 @@ class NotificationPreferenceScriptServiceTest
                 NotificationFormat.EMAIL, "delete");
 
         when(notificationPreferenceManager.getAllPreferences(eq(userRef))).thenReturn(
-                Arrays.asList(existingPref1, existingPref2, existingPref3));
+                List.of(existingPref1, existingPref2, existingPref3));
 
         final MutableBoolean isOk = new MutableBoolean(false);
         doAnswer(invocationOnMock -> {
@@ -157,7 +154,7 @@ class NotificationPreferenceScriptServiceTest
         when(documentAccessBridge.getCurrentUserReference()).thenReturn(user);
         DocumentUserReference documentUserReference = new DocumentUserReference(user, true);
 
-        when(notificationPreferenceManager.getAllPreferences(user)).thenReturn(Collections.emptyList());
+        when(notificationPreferenceManager.getAllPreferences(user)).thenReturn(List.of());
         assertTrue(this.scriptService
             .isEventTypeEnabledForUser("update", NotificationFormat.ALERT, documentUserReference));
 
@@ -175,7 +172,7 @@ class NotificationPreferenceScriptServiceTest
         when(pref2.getProperties()).thenReturn(properties2);
         when(pref2.isNotificationEnabled()).thenReturn(true);
 
-        when(notificationPreferenceManager.getAllPreferences(user)).thenReturn(Arrays.asList(pref1, pref2));
+        when(notificationPreferenceManager.getAllPreferences(user)).thenReturn(List.of(pref1, pref2));
 
         assertTrue(this.scriptService
             .isEventTypeEnabledForUser("update", NotificationFormat.ALERT, documentUserReference));
@@ -210,7 +207,7 @@ class NotificationPreferenceScriptServiceTest
     {
         WikiReference wiki = new WikiReference("whatever");
 
-        when(notificationPreferenceManager.getAllPreferences(wiki)).thenReturn(Collections.emptyList());
+        when(notificationPreferenceManager.getAllPreferences(wiki)).thenReturn(List.of());
         assertTrue(this.scriptService.isEventTypeEnabled("update", NotificationFormat.ALERT,
                 wiki.getName()));
 
@@ -228,7 +225,7 @@ class NotificationPreferenceScriptServiceTest
         when(pref2.getProperties()).thenReturn(properties2);
         when(pref2.isNotificationEnabled()).thenReturn(true);
 
-        when(notificationPreferenceManager.getAllPreferences(wiki)).thenReturn(Arrays.asList(pref1, pref2));
+        when(notificationPreferenceManager.getAllPreferences(wiki)).thenReturn(List.of(pref1, pref2));
         assertTrue(this.scriptService.isEventTypeEnabled("update", NotificationFormat.ALERT,
                 wiki.getName()));
         assertFalse(this.scriptService.isEventTypeEnabled("update", NotificationFormat.EMAIL,
@@ -244,14 +241,8 @@ class NotificationPreferenceScriptServiceTest
         doThrow(e).when(authorizationManager).checkAccess(Right.ADMIN, new WikiReference("wikiA"));
 
         String json = "";
-        Exception caughtException = null;
-        try {
-            this.scriptService.saveNotificationPreferencesForCurrentWiki(json);
-        } catch (Exception ex) {
-            caughtException = ex;
-        }
-
-        assertNotNull(caughtException);
+        AccessDeniedException caughtException = assertThrows(AccessDeniedException.class,
+            () -> this.scriptService.saveNotificationPreferencesForCurrentWiki(json));
         assertEquals(e, caughtException);
     }
 
@@ -263,14 +254,8 @@ class NotificationPreferenceScriptServiceTest
         doThrow(e).when(authorizationManager).checkAccess(Right.EDIT, userDoc);
 
         String json = "";
-        Exception caughtException = null;
-        try {
-            this.scriptService.saveNotificationPreferences(json, userDoc);
-        } catch (Exception ex) {
-            caughtException = ex;
-        }
-
-        assertNotNull(caughtException);
+        AccessDeniedException caughtException = assertThrows(AccessDeniedException.class,
+            () -> this.scriptService.saveNotificationPreferences(json, userDoc));
         assertEquals(e, caughtException);
     }
 }
