@@ -19,9 +19,7 @@
  */
 package org.xwiki.query.solr.internal;
 
-import java.lang.reflect.ParameterizedType;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 import java.util.Locale;
 
 import org.apache.solr.client.solrj.SolrQuery;
@@ -29,17 +27,12 @@ import org.apache.solr.client.solrj.response.QueryResponse;
 import org.apache.solr.common.SolrDocument;
 import org.apache.solr.common.SolrDocumentList;
 import org.apache.solr.common.params.SolrParams;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.mockito.invocation.InvocationOnMock;
-import org.mockito.stubbing.Answer;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 import org.xwiki.component.internal.ContextComponentManagerProvider;
-import org.xwiki.component.util.DefaultParameterizedType;
+import org.xwiki.job.event.status.JobProgressManager;
 import org.xwiki.model.reference.DocumentReference;
 import org.xwiki.model.reference.DocumentReferenceResolver;
-import org.xwiki.query.QueryExecutor;
 import org.xwiki.query.QueryManager;
 import org.xwiki.query.internal.DefaultQuery;
 import org.xwiki.query.internal.DefaultQueryExecutorManager;
@@ -47,15 +40,22 @@ import org.xwiki.query.internal.DefaultQueryManager;
 import org.xwiki.search.solr.internal.api.SolrInstance;
 import org.xwiki.security.authorization.AuthorizationManager;
 import org.xwiki.security.authorization.Right;
+import org.xwiki.test.LogLevel;
 import org.xwiki.test.annotation.ComponentList;
-import org.xwiki.test.mockito.MockitoComponentMockingRule;
+import org.xwiki.test.junit5.LogCaptureExtension;
+import org.xwiki.test.junit5.mockito.InjectComponentManager;
+import org.xwiki.test.junit5.mockito.InjectMockComponents;
+import org.xwiki.test.junit5.mockito.MockComponent;
+import org.xwiki.test.mockito.MockitoComponentManager;
 
-import com.xpn.xwiki.XWikiContext;
 import com.xpn.xwiki.doc.XWikiDocument;
-import com.xpn.xwiki.test.MockitoOldcoreRule;
+import com.xpn.xwiki.test.MockitoOldcore;
+import com.xpn.xwiki.test.junit5.mockito.OldcoreTest;
 import com.xpn.xwiki.test.reference.ReferenceComponentList;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
@@ -63,18 +63,19 @@ import static org.mockito.Mockito.when;
 
 /**
  * Basic test for the {@link SolrQueryExecutor}.
- * 
+ *
  * @version $Id$
  */
+@OldcoreTest
 @ComponentList({DefaultQueryManager.class, DefaultQueryExecutorManager.class, ContextComponentManagerProvider.class})
 @ReferenceComponentList
-public class SolrQueryExecutorTest
+class SolrQueryExecutorTest
 {
     private static final String ITERABLE_PARAM_NAME = "multiParam";
 
     private static final String[] ITERABLE_PARAM_EXPECTED = { "value1", "value2" };
 
-    private static final Iterable<String> ITERABLE_PARAM_VALUE = Arrays.asList(ITERABLE_PARAM_EXPECTED);
+    private static final Iterable<String> ITERABLE_PARAM_VALUE = List.of(ITERABLE_PARAM_EXPECTED);
 
     private static final String INT_ARR_PARAM_NAME = "intArrayParam";
 
@@ -94,50 +95,52 @@ public class SolrQueryExecutorTest
 
     private static final Object SINGLE_PARAM_EXPECTED = SINGLE_PARAM_VALUE.toString();
 
-    public final MockitoComponentMockingRule<QueryExecutor> componentManager =
-        new MockitoComponentMockingRule<QueryExecutor>(SolrQueryExecutor.class);
+    @RegisterExtension
+    private LogCaptureExtension logCapture = new LogCaptureExtension(LogLevel.WARN);
 
-    @Rule
-    public final MockitoOldcoreRule oldCore = new MockitoOldcoreRule(this.componentManager);
+    @InjectMockComponents
+    private SolrQueryExecutor solrQueryExecutor;
 
-    private SolrInstance solr;
+    @MockComponent
+    private SolrInstance solrInstance;
 
-    @Before
-    public void configure() throws Exception
-    {
-        this.solr = this.componentManager.registerMockComponent(SolrInstance.class);
-    }
+    @MockComponent
+    private AuthorizationManager authorizationManager;
+
+    @MockComponent
+    private DocumentReferenceResolver<SolrDocument> solrDocumentReferenceResolver;
+
+    @MockComponent
+    private JobProgressManager progress;
+
+    @InjectComponentManager
+    private MockitoComponentManager componentManager;
 
     @Test
-    public void testExecutorRegistration() throws Exception
+    void executorRegistration() throws Exception
     {
         QueryManager queryManager = this.componentManager.getInstance(QueryManager.class);
 
-        Assert.assertTrue(queryManager.getLanguages().contains(SolrQueryExecutor.SOLR));
+        assertTrue(queryManager.getLanguages().contains(SolrQueryExecutor.SOLR));
     }
 
     @Test
-    public void testMultiValuedQueryArgs() throws Exception
+    void multiValuedQueryArgs(MockitoOldcore oldcore) throws Exception
     {
-        when(solr.query(any(SolrQuery.class))).then(new Answer<Object>()
-        {
-            @Override
-            public Object answer(InvocationOnMock invocation) throws Throwable
-            {
-                SolrQuery solrQuery = (SolrQuery) invocation.getArguments()[0];
+        when(this.solrInstance.query(any(SolrQuery.class))).then(invocation -> {
+            SolrQuery solrQuery = (SolrQuery) invocation.getArguments()[0];
 
-                Assert.assertArrayEquals(ITERABLE_PARAM_EXPECTED, solrQuery.getParams(ITERABLE_PARAM_NAME));
-                Assert.assertArrayEquals(INT_ARR_PARAM_EXPECTED, solrQuery.getParams(INT_ARR_PARAM_NAME));
-                Assert.assertArrayEquals(STR_ARR_PARAM_EXPECTED, solrQuery.getParams(STR_ARR_PARAM_NAME));
-                Assert.assertEquals(SINGLE_PARAM_EXPECTED, solrQuery.get(SINGLE_PARAM_NAME));
+            assertArrayEquals(ITERABLE_PARAM_EXPECTED, solrQuery.getParams(ITERABLE_PARAM_NAME));
+            assertArrayEquals(INT_ARR_PARAM_EXPECTED, solrQuery.getParams(INT_ARR_PARAM_NAME));
+            assertArrayEquals(STR_ARR_PARAM_EXPECTED, solrQuery.getParams(STR_ARR_PARAM_NAME));
+            assertEquals(SINGLE_PARAM_EXPECTED, solrQuery.get(SINGLE_PARAM_NAME));
 
-                // Check that the default list of supported locales is taken from the wiki configuration.
-                Assert.assertEquals("en,fr,de", solrQuery.get("xwiki.supportedLocales"));
+            // Check that the default list of supported locales is taken from the wiki configuration.
+            assertEquals("en,fr,de", solrQuery.get("xwiki.supportedLocales"));
 
-                QueryResponse r = mock(QueryResponse.class);
-                when(r.getResults()).thenReturn(new SolrDocumentList());
-                return r;
-            }
+            QueryResponse r = mock(QueryResponse.class);
+            when(r.getResults()).thenReturn(new SolrDocumentList());
+            return r;
         });
 
         DefaultQuery query = new DefaultQuery("TestQuery", null);
@@ -147,52 +150,45 @@ public class SolrQueryExecutorTest
         query.bindValue(SINGLE_PARAM_NAME, SINGLE_PARAM_VALUE);
 
         // The default list of supported locales should be taken from the wiki configuration.
-        XWikiContext xcontext = this.oldCore.getXWikiContext();
-        doReturn(Arrays.asList(Locale.ENGLISH, Locale.FRENCH, Locale.GERMAN)).when(this.oldCore.getSpyXWiki())
-            .getAvailableLocales(xcontext);
+        doReturn(List.of(Locale.ENGLISH, Locale.FRENCH, Locale.GERMAN))
+            .when(oldcore.getSpyXWiki()).getAvailableLocales(oldcore.getXWikiContext());
 
-        this.componentManager.getComponentUnderTest().execute(query);
+        this.solrQueryExecutor.execute(query);
     }
 
     @Test
-    public void filterResponse() throws Exception
+    void filterResponse(MockitoOldcore oldcore) throws Exception
     {
-        ParameterizedType resolverType =
-            new DefaultParameterizedType(null, DocumentReferenceResolver.class, SolrDocument.class);
-        DocumentReferenceResolver<SolrDocument> resolver = this.componentManager.getInstance(resolverType);
-
-        AuthorizationManager authorizationManager = this.componentManager.getInstance(AuthorizationManager.class);
-
         DocumentReference currentUserReference = new DocumentReference("xwiki", "XWiki", "currentuser");
-        this.oldCore.getXWikiContext().setUserReference(currentUserReference);
+        oldcore.getXWikiContext().setUserReference(currentUserReference);
 
         DocumentReference currentAuthorReference = new DocumentReference("xwiki", "XWiki", "currentauthor");
         XWikiDocument currentDocument = new XWikiDocument(currentAuthorReference);
         currentDocument.setContentAuthorReference(currentAuthorReference);
-        this.oldCore.getXWikiContext().setDoc(currentDocument);
+        oldcore.getXWikiContext().setDoc(currentDocument);
 
         DocumentReference aliceReference = new DocumentReference("wiki", "Users", "Alice");
-        when(authorizationManager.hasAccess(Right.VIEW, currentAuthorReference, aliceReference)).thenReturn(true);
+        when(this.authorizationManager.hasAccess(Right.VIEW, currentAuthorReference, aliceReference)).thenReturn(true);
         SolrDocument alice = new SolrDocument();
-        when(resolver.resolve(alice)).thenReturn(aliceReference);
+        when(this.solrDocumentReferenceResolver.resolve(alice)).thenReturn(aliceReference);
 
         DocumentReference bobReference = new DocumentReference("wiki", "Users", "Bob");
-        when(authorizationManager.hasAccess(Right.VIEW, currentUserReference, bobReference)).thenReturn(true);
-        when(authorizationManager.hasAccess(Right.VIEW, currentAuthorReference, bobReference)).thenReturn(true);
+        when(this.authorizationManager.hasAccess(Right.VIEW, currentUserReference, bobReference)).thenReturn(true);
+        when(this.authorizationManager.hasAccess(Right.VIEW, currentAuthorReference, bobReference)).thenReturn(true);
         SolrDocument bob = new SolrDocument();
-        when(resolver.resolve(bob)).thenReturn(bobReference);
+        when(this.solrDocumentReferenceResolver.resolve(bob)).thenReturn(bobReference);
 
         DocumentReference carolReference = new DocumentReference("wiki", "Users", "Carol");
-        when(authorizationManager.hasAccess(Right.VIEW, currentUserReference, carolReference)).thenReturn(true);
+        when(this.authorizationManager.hasAccess(Right.VIEW, currentUserReference, carolReference)).thenReturn(true);
         SolrDocument carol = new SolrDocument();
-        when(resolver.resolve(carol)).thenReturn(carolReference);
+        when(this.solrDocumentReferenceResolver.resolve(carol)).thenReturn(carolReference);
 
         SolrDocumentList sourceResults = new SolrDocumentList();
-        sourceResults.addAll(Arrays.asList(alice, bob, carol));
+        sourceResults.addAll(List.of(alice, bob, carol));
         sourceResults.setNumFound(3);
 
         QueryResponse response = mock(QueryResponse.class);
-        when(this.solr.query(any(SolrParams.class))).thenReturn(response);
+        when(this.solrInstance.query(any(SolrParams.class))).thenReturn(response);
 
         DefaultQuery query = new DefaultQuery("", null);
 
@@ -200,90 +196,87 @@ public class SolrQueryExecutorTest
 
         when(response.getResults()).thenReturn((SolrDocumentList) sourceResults.clone());
 
-        SolrDocumentList results =
-            ((QueryResponse) this.componentManager.getComponentUnderTest().execute(query).get(0)).getResults();
-        assertEquals(Arrays.asList(alice, bob, carol), results);
+        SolrDocumentList results = ((QueryResponse) this.solrQueryExecutor.execute(query).getFirst()).getResults();
+        assertEquals(List.of(alice, bob, carol), results);
 
         // Check current user right
 
         query.checkCurrentUser(true);
         when(response.getResults()).thenReturn((SolrDocumentList) sourceResults.clone());
 
-        results = ((QueryResponse) this.componentManager.getComponentUnderTest().execute(query).get(0)).getResults();
-        assertEquals(Arrays.asList(bob, carol), results);
+        results = ((QueryResponse) this.solrQueryExecutor.execute(query).getFirst()).getResults();
+        assertEquals(List.of(bob, carol), results);
 
         // Check both current user and author rights
 
         query.checkCurrentAuthor(true);
         when(response.getResults()).thenReturn((SolrDocumentList) sourceResults.clone());
 
-        results = ((QueryResponse) this.componentManager.getComponentUnderTest().execute(query).get(0)).getResults();
-        assertEquals(Arrays.asList(bob), results);
+        results = ((QueryResponse) this.solrQueryExecutor.execute(query).getFirst()).getResults();
+        assertEquals(List.of(bob), results);
 
         // Check current author right
 
         query.checkCurrentUser(false);
         when(response.getResults()).thenReturn((SolrDocumentList) sourceResults.clone());
 
-        results = ((QueryResponse) this.componentManager.getComponentUnderTest().execute(query).get(0)).getResults();
-        assertEquals(Arrays.asList(alice, bob), results);
+        results = ((QueryResponse) this.solrQueryExecutor.execute(query).getFirst()).getResults();
+        assertEquals(List.of(alice, bob), results);
     }
 
     @Test
-    public void filterResponseWithException() throws Exception
+    void filterResponseWithException(MockitoOldcore oldcore) throws Exception
     {
-        ParameterizedType resolverType =
-            new DefaultParameterizedType(null, DocumentReferenceResolver.class, SolrDocument.class);
-        DocumentReferenceResolver<SolrDocument> resolver = this.componentManager.getInstance(resolverType);
-
-        AuthorizationManager authorizationManager = this.componentManager.getInstance(AuthorizationManager.class);
-
         DocumentReference currentUserReference = new DocumentReference("xwiki", "XWiki", "currentuser");
-        this.oldCore.getXWikiContext().setUserReference(currentUserReference);
+        oldcore.getXWikiContext().setUserReference(currentUserReference);
 
         DocumentReference aliceReference = new DocumentReference("wiki", "Users", "Alice");
         SolrDocument alice = new SolrDocument();
-        when(resolver.resolve(alice)).thenReturn(aliceReference);
+        when(this.solrDocumentReferenceResolver.resolve(alice)).thenReturn(aliceReference);
 
         DocumentReference bobReference = new DocumentReference("wiki", "Users", "Bob");
-        when(authorizationManager.hasAccess(Right.VIEW, currentUserReference, bobReference)).thenReturn(true);
+        when(this.authorizationManager.hasAccess(Right.VIEW, currentUserReference, bobReference)).thenReturn(true);
         SolrDocument bob = new SolrDocument();
-        when(resolver.resolve(bob)).thenReturn(bobReference);
+        when(this.solrDocumentReferenceResolver.resolve(bob)).thenReturn(bobReference);
 
         SolrDocumentList sourceResults = new SolrDocumentList();
-        sourceResults.addAll(Arrays.asList(alice, bob));
+        sourceResults.addAll(List.of(alice, bob));
         sourceResults.setNumFound(2);
 
         QueryResponse response = mock(QueryResponse.class);
-        when(this.solr.query(any(SolrParams.class))).thenReturn(response);
+        when(this.solrInstance.query(any(SolrParams.class))).thenReturn(response);
 
         DefaultQuery query = new DefaultQuery("", null);
 
         // No right check, verify that the setup works.
         when(response.getResults()).thenReturn((SolrDocumentList) sourceResults.clone());
-        SolrDocumentList results =
-            ((QueryResponse) this.componentManager.getComponentUnderTest().execute(query).get(0)).getResults();
-        assertEquals(Arrays.asList(alice, bob), results);
+        SolrDocumentList results = ((QueryResponse) this.solrQueryExecutor.execute(query).getFirst()).getResults();
+        assertEquals(List.of(alice, bob), results);
         assertEquals(2, results.getNumFound());
 
         // Check current user right
         query.checkCurrentUser(true);
 
         // Throw an exception when resolving Alice
-        when(resolver.resolve(alice)).thenThrow(new RuntimeException("Alice"));
+        when(this.solrDocumentReferenceResolver.resolve(alice)).thenThrow(new RuntimeException("Alice"));
         when(response.getResults()).thenReturn((SolrDocumentList) sourceResults.clone());
 
-        results = ((QueryResponse) this.componentManager.getComponentUnderTest().execute(query).get(0)).getResults();
-        assertEquals(Collections.singletonList(bob), results);
+        results = ((QueryResponse) this.solrQueryExecutor.execute(query).getFirst()).getResults();
+        assertEquals(List.of(bob), results);
         assertEquals(1, results.getNumFound());
 
         // Throw also an exception when resolving Bob
-        when(resolver.resolve(bob)).thenThrow(new RuntimeException("Bob"));
+        when(this.solrDocumentReferenceResolver.resolve(bob)).thenThrow(new RuntimeException("Bob"));
         when(response.getResults()).thenReturn((SolrDocumentList) sourceResults.clone());
 
         // Assert that the results are empty when both throw an exception
-        results = ((QueryResponse) this.componentManager.getComponentUnderTest().execute(query).get(0)).getResults();
-        assertEquals(Collections.emptyList(), results);
+        results = ((QueryResponse) this.solrQueryExecutor.execute(query).getFirst()).getResults();
+        assertEquals(List.of(), results);
         assertEquals(0, results.getNumFound());
+
+        // One warning for Alice in the previous execution, two for Alice and Bob in this one.
+        assertEquals("Removing bad result: SolrDocument{}", this.logCapture.getMessage(0));
+        assertEquals("Removing bad result: SolrDocument{}", this.logCapture.getMessage(1));
+        assertEquals("Removing bad result: SolrDocument{}", this.logCapture.getMessage(2));
     }
 }
