@@ -19,29 +19,16 @@
  */
 package org.xwiki.wiki.script;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import javax.inject.Provider;
 
 import org.apache.commons.lang3.StringUtils;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.xwiki.component.util.DefaultParameterizedType;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 import org.xwiki.context.Execution;
 import org.xwiki.context.ExecutionContext;
 import org.xwiki.model.reference.DocumentReference;
@@ -51,7 +38,11 @@ import org.xwiki.script.service.ScriptServiceManager;
 import org.xwiki.security.authorization.AccessDeniedException;
 import org.xwiki.security.authorization.AuthorizationManager;
 import org.xwiki.security.authorization.Right;
-import org.xwiki.test.mockito.MockitoComponentMockingRule;
+import org.xwiki.test.LogLevel;
+import org.xwiki.test.junit5.LogCaptureExtension;
+import org.xwiki.test.junit5.mockito.ComponentTest;
+import org.xwiki.test.junit5.mockito.InjectMockComponents;
+import org.xwiki.test.junit5.mockito.MockComponent;
 import org.xwiki.url.internal.standard.StandardURLConfiguration;
 import org.xwiki.wiki.configuration.WikiConfiguration;
 import org.xwiki.wiki.descriptor.WikiDescriptor;
@@ -63,29 +54,56 @@ import org.xwiki.wiki.manager.WikiManagerException;
 import com.xpn.xwiki.XWikiContext;
 import com.xpn.xwiki.doc.XWikiDocument;
 
-public class WikiManagerScriptServiceTest
-{
-    @Rule
-    public MockitoComponentMockingRule<WikiManagerScriptService> mocker =
-        new MockitoComponentMockingRule<WikiManagerScriptService>(WikiManagerScriptService.class);
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
+@ComponentTest
+class WikiManagerScriptServiceTest
+{
+    @InjectMockComponents
+    private WikiManagerScriptService wikiManagerScriptService;
+
+    @MockComponent
     private WikiManager wikiManager;
 
+    @MockComponent
     private WikiDescriptorManager wikiDescriptorManager;
 
+    @MockComponent
     private Provider<XWikiContext> xcontextProvider;
 
+    @MockComponent
     private Execution execution;
 
+    @MockComponent
     private AuthorizationManager authorizationManager;
 
+    @MockComponent
     private EntityReferenceSerializer<String> entityReferenceSerializer;
 
+    @MockComponent
     private ScriptServiceManager scriptServiceManager;
 
+    @MockComponent
     private StandardURLConfiguration standardURLConfiguration;
 
+    @MockComponent
     private WikiConfiguration wikiConfiguration;
+
+    @MockComponent
+    private WikiDescriptorDocumentHelper wikiDescriptorDocumentHelper;
+
+    @RegisterExtension
+    private final LogCaptureExtension logCapture = new LogCaptureExtension(LogLevel.ERROR);
 
     private XWikiContext xcontext;
 
@@ -95,37 +113,23 @@ public class WikiManagerScriptServiceTest
 
     private XWikiDocument currentDoc;
 
-    private WikiDescriptorDocumentHelper wikiDescriptorDocumentHelper;
-
-    @Before
-    public void setUp() throws Exception
+    @BeforeEach
+    void setUp()
     {
-        wikiManager = mocker.getInstance(WikiManager.class);
-        wikiDescriptorManager = mocker.getInstance(WikiDescriptorManager.class);
-        authorizationManager = mocker.getInstance(AuthorizationManager.class);
-        scriptServiceManager = mocker.getInstance(ScriptServiceManager.class);
-        entityReferenceSerializer =
-            mocker.getInstance(new DefaultParameterizedType(null, EntityReferenceSerializer.class, String.class));
-        standardURLConfiguration = mocker.getInstance(StandardURLConfiguration.class);
-        wikiConfiguration = mocker.getInstance(WikiConfiguration.class);
-        xcontextProvider = mocker.registerMockComponent(XWikiContext.TYPE_PROVIDER);
-        xcontext = mock(XWikiContext.class);
-        when(xcontextProvider.get()).thenReturn(xcontext);
-        execution = mocker.getInstance(Execution.class);
-        executionContext = new ExecutionContext();
-        when(execution.getContext()).thenReturn(executionContext);
+        this.xcontext = mock(XWikiContext.class);
+        when(this.xcontextProvider.get()).thenReturn(this.xcontext);
+        this.executionContext = new ExecutionContext();
+        when(this.execution.getContext()).thenReturn(this.executionContext);
 
-        currentUserRef = new DocumentReference("mainWiki", "XWiki", "User");
-        when(xcontext.getUserReference()).thenReturn(currentUserRef);
+        this.currentUserRef = new DocumentReference("mainWiki", "XWiki", "User");
+        when(this.xcontext.getUserReference()).thenReturn(this.currentUserRef);
 
-        currentDoc = mock(XWikiDocument.class);
-        when(xcontext.getDoc()).thenReturn(currentDoc);
+        this.currentDoc = mock(XWikiDocument.class);
+        when(this.xcontext.getDoc()).thenReturn(this.currentDoc);
 
-        when(wikiDescriptorManager.getMainWikiId()).thenReturn("mainWiki");
+        when(this.wikiDescriptorManager.getMainWikiId()).thenReturn("mainWiki");
 
-        when(entityReferenceSerializer.serialize(currentUserRef)).thenReturn("mainWiki:XWiki.User");
-
-        wikiDescriptorDocumentHelper = mocker.getInstance(WikiDescriptorDocumentHelper.class);
+        when(this.entityReferenceSerializer.serialize(this.currentUserRef)).thenReturn("mainWiki:XWiki.User");
     }
 
     /**
@@ -134,24 +138,25 @@ public class WikiManagerScriptServiceTest
     private Exception currentScriptHasNotProgrammingRight() throws AccessDeniedException
     {
         DocumentReference authorDocRef = new DocumentReference("mainWiki", "XWiki", "Admin");
-        when(currentDoc.getAuthorReference()).thenReturn(authorDocRef);
+        when(this.currentDoc.getAuthorReference()).thenReturn(authorDocRef);
         DocumentReference currentDocRef = new DocumentReference("subwiki", "Test", "test");
-        when(currentDoc.getDocumentReference()).thenReturn(currentDocRef);
+        when(this.currentDoc.getDocumentReference()).thenReturn(currentDocRef);
 
         Exception exception = new AccessDeniedException(Right.PROGRAM, authorDocRef, currentDocRef);
-        doThrow(exception).when(authorizationManager).checkAccess(Right.PROGRAM, authorDocRef, currentDocRef);
+        doThrow(exception).when(this.authorizationManager).checkAccess(Right.PROGRAM, authorDocRef, currentDocRef);
 
         return exception;
     }
 
     /**
-     * @return the exception expected when the current user has the not the admin right
+     * @return the exception expected when the current user doesn't have the admin right
      */
     private Exception currentUserHasNotProgrammingRight() throws AccessDeniedException
     {
         WikiReference wiki = new WikiReference("mainWiki");
-        Exception exception = new AccessDeniedException(Right.PROGRAM, currentUserRef, wiki);
-        doThrow(exception).when(authorizationManager).checkAccess(eq(Right.PROGRAM), eq(currentUserRef), eq(wiki));
+        Exception exception = new AccessDeniedException(Right.PROGRAM, this.currentUserRef, wiki);
+        doThrow(exception).when(this.authorizationManager).checkAccess(eq(Right.PROGRAM), eq(this.currentUserRef),
+            eq(wiki));
 
         return exception;
     }
@@ -162,8 +167,9 @@ public class WikiManagerScriptServiceTest
     private Exception currentUserHasNotCreateWikiRight() throws AccessDeniedException
     {
         WikiReference wiki = new WikiReference("mainWiki");
-        Exception exception = new AccessDeniedException(Right.CREATE_WIKI, currentUserRef, wiki);
-        doThrow(exception).when(authorizationManager).checkAccess(eq(Right.CREATE_WIKI), eq(currentUserRef), eq(wiki));
+        Exception exception = new AccessDeniedException(Right.CREATE_WIKI, this.currentUserRef, wiki);
+        doThrow(exception).when(this.authorizationManager).checkAccess(eq(Right.CREATE_WIKI), eq(this.currentUserRef),
+            eq(wiki));
 
         return exception;
     }
@@ -176,422 +182,447 @@ public class WikiManagerScriptServiceTest
     {
         DocumentReference descriptorDocument =
             new DocumentReference("mainWiki", "XWiki", "XWikiServer" + StringUtils.capitalize(wikiId));
-        when(wikiDescriptorDocumentHelper.getDocumentReferenceFromId(wikiId)).thenReturn(descriptorDocument);
+        when(this.wikiDescriptorDocumentHelper.getDocumentReferenceFromId(wikiId)).thenReturn(descriptorDocument);
 
         return descriptorDocument;
     }
 
     @Test
-    public void get() throws Exception
+    void get()
     {
         // Test
-        mocker.getComponentUnderTest().get("template");
+        this.wikiManagerScriptService.get("template");
         // Verify
-        verify(scriptServiceManager).get("wiki.template");
+        verify(this.scriptServiceManager).get("wiki.template");
     }
 
     @Test
-    public void createWiki() throws Exception
+    void createWiki() throws Exception
     {
         WikiDescriptor descriptor = new WikiDescriptor("newiki", "alias", "userA");
-        when(wikiManager.create("newwiki", "alias", "userA", true)).thenReturn(descriptor);
+        when(this.wikiManager.create("newwiki", "alias", "userA", true)).thenReturn(descriptor);
 
-        WikiDescriptor result = mocker.getComponentUnderTest().createWiki("newwiki", "alias", "userA", true);
+        WikiDescriptor result = this.wikiManagerScriptService.createWiki("newwiki", "alias", "userA", true);
         assertEquals(descriptor, result);
     }
 
     @Test
-    public void createWikiWithoutPR() throws Exception
+    void createWikiWithoutPR() throws Exception
     {
         Exception exception = currentScriptHasNotProgrammingRight();
 
-        WikiDescriptor result = mocker.getComponentUnderTest().createWiki("newwiki", "alias", "userA", true);
+        WikiDescriptor result = this.wikiManagerScriptService.createWiki("newwiki", "alias", "userA", true);
         assertNull(result);
-        assertEquals(exception, mocker.getComponentUnderTest().getLastError());
+        assertEquals(exception, this.wikiManagerScriptService.getLastError());
+        assertEquals("Access denied when checking [programming] access to [subwiki:Test.test] for user"
+            + " [mainWiki:XWiki.Admin]", this.logCapture.getMessage(0));
     }
 
     @Test
-    public void createWikiWithoutCreateWikiRight() throws Exception
+    void createWikiWithoutCreateWikiRight() throws Exception
     {
         Exception exception = currentUserHasNotCreateWikiRight();
 
-        WikiDescriptor result = mocker.getComponentUnderTest().createWiki("newwiki", "alias", "userA", true);
+        WikiDescriptor result = this.wikiManagerScriptService.createWiki("newwiki", "alias", "userA", true);
         assertNull(result);
-        assertEquals(exception, mocker.getComponentUnderTest().getLastError());
+        assertEquals(exception, this.wikiManagerScriptService.getLastError());
+        assertEquals("Access denied when checking [createwiki] access to [Wiki mainWiki] for user"
+            + " [mainWiki:XWiki.User]", this.logCapture.getMessage(0));
     }
 
     @Test
-    public void createWikiNoFailOnExistWithoutPR() throws Exception
+    void createWikiNoFailOnExistWithoutPR() throws Exception
     {
         Exception exception = currentUserHasNotProgrammingRight();
 
-        WikiDescriptor result = mocker.getComponentUnderTest().createWiki("newwiki", "alias", "userA", false);
+        WikiDescriptor result = this.wikiManagerScriptService.createWiki("newwiki", "alias", "userA", false);
         assertNull(result);
-        assertEquals(exception, mocker.getComponentUnderTest().getLastError());
+        assertEquals(exception, this.wikiManagerScriptService.getLastError());
+        assertEquals("Access denied when checking [programming] access to [Wiki mainWiki] for user"
+            + " [mainWiki:XWiki.User]", this.logCapture.getMessage(0));
     }
 
     @Test
-    public void createWikiError() throws Exception
+    void createWikiError() throws Exception
     {
         Exception exception = new WikiManagerException("error on create");
-        when(wikiManager.create("newwiki", "alias", "userA", true)).thenThrow(exception);
-        WikiDescriptor result = mocker.getComponentUnderTest().createWiki("newwiki", "alias", "userA", true);
+        when(this.wikiManager.create("newwiki", "alias", "userA", true)).thenThrow(exception);
+        WikiDescriptor result = this.wikiManagerScriptService.createWiki("newwiki", "alias", "userA", true);
         assertNull(result);
-        assertEquals(exception, mocker.getComponentUnderTest().getLastError());
+        assertEquals(exception, this.wikiManagerScriptService.getLastError());
+        assertEquals("error on create", this.logCapture.getMessage(0));
     }
 
     @Test
-    public void getByAlias() throws Exception
+    void getByAlias() throws Exception
     {
         WikiDescriptor descriptor = new WikiDescriptor("wikiId", "wikiAlias");
-        when(wikiDescriptorManager.getByAlias("wikiAlias")).thenReturn(descriptor);
+        when(this.wikiDescriptorManager.getByAlias("wikiAlias")).thenReturn(descriptor);
 
-        WikiDescriptor result = mocker.getComponentUnderTest().getByAlias("wikiAlias");
+        WikiDescriptor result = this.wikiManagerScriptService.getByAlias("wikiAlias");
         assertEquals(descriptor, result);
     }
 
     @Test
-    public void getByAliasError() throws Exception
+    void getByAliasError() throws Exception
     {
         Exception exception = new WikiManagerException("error in getByAlias");
-        when(wikiDescriptorManager.getByAlias("wikiAlias")).thenThrow(exception);
+        when(this.wikiDescriptorManager.getByAlias("wikiAlias")).thenThrow(exception);
 
-        WikiDescriptor result = mocker.getComponentUnderTest().getByAlias("wikiAlias");
+        WikiDescriptor result = this.wikiManagerScriptService.getByAlias("wikiAlias");
         assertNull(result);
-        assertEquals(exception, mocker.getComponentUnderTest().getLastError());
+        assertEquals(exception, this.wikiManagerScriptService.getLastError());
+        assertEquals("error in getByAlias", this.logCapture.getMessage(0));
     }
 
     @Test
-    public void getById() throws Exception
+    void getById() throws Exception
     {
         WikiDescriptor descriptor = new WikiDescriptor("wikiId", "wikiAlias");
-        when(wikiDescriptorManager.getById("wikiId")).thenReturn(descriptor);
+        when(this.wikiDescriptorManager.getById("wikiId")).thenReturn(descriptor);
 
-        WikiDescriptor result = mocker.getComponentUnderTest().getById("wikiId");
+        WikiDescriptor result = this.wikiManagerScriptService.getById("wikiId");
         assertEquals(descriptor, result);
     }
 
     @Test
-    public void getByIdError() throws Exception
+    void getByIdError() throws Exception
     {
         Exception exception = new WikiManagerException("error in getById");
-        when(wikiDescriptorManager.getById("wikiId")).thenThrow(exception);
+        when(this.wikiDescriptorManager.getById("wikiId")).thenThrow(exception);
 
-        WikiDescriptor result = mocker.getComponentUnderTest().getById("wikiId");
+        WikiDescriptor result = this.wikiManagerScriptService.getById("wikiId");
         assertNull(result);
-        assertEquals(exception, mocker.getComponentUnderTest().getLastError());
+        assertEquals(exception, this.wikiManagerScriptService.getLastError());
+        assertEquals("error in getById", this.logCapture.getMessage(0));
     }
 
     @Test
-    public void getAll() throws Exception
+    void getAll() throws Exception
     {
         WikiDescriptor descriptor1 = new WikiDescriptor("wikiId1", "wikiAlias1");
         WikiDescriptor descriptor2 = new WikiDescriptor("wikiId2", "wikiAlias2");
-        Collection<WikiDescriptor> descriptors = new ArrayList<WikiDescriptor>();
+        Collection<WikiDescriptor> descriptors = new ArrayList<>();
         descriptors.add(descriptor1);
         descriptors.add(descriptor2);
-        when(wikiDescriptorManager.getAll()).thenReturn(descriptors);
+        when(this.wikiDescriptorManager.getAll()).thenReturn(descriptors);
 
-        Collection<WikiDescriptor> result = mocker.getComponentUnderTest().getAll();
+        Collection<WikiDescriptor> result = this.wikiManagerScriptService.getAll();
         assertEquals(descriptors, result);
     }
 
     @Test
-    public void getAllIds() throws Exception
+    void getAllIds() throws Exception
     {
-        Collection<String> wikiIds = Arrays.asList("wikiId1", "wikiId2");
-        when(wikiDescriptorManager.getAllIds()).thenReturn(wikiIds);
+        Collection<String> wikiIds = List.of("wikiId1", "wikiId2");
+        when(this.wikiDescriptorManager.getAllIds()).thenReturn(wikiIds);
 
-        Collection<String> result = mocker.getComponentUnderTest().getAllIds();
+        Collection<String> result = this.wikiManagerScriptService.getAllIds();
         assertEquals(wikiIds, result);
     }
 
     @Test
-    public void getAllError() throws Exception
+    void getAllError() throws Exception
     {
         Exception exception = new WikiManagerException("error in getAll");
-        when(wikiDescriptorManager.getAll()).thenThrow(exception);
+        when(this.wikiDescriptorManager.getAll()).thenThrow(exception);
 
-        Collection<WikiDescriptor> result = mocker.getComponentUnderTest().getAll();
+        Collection<WikiDescriptor> result = this.wikiManagerScriptService.getAll();
         assertTrue(result.isEmpty());
-        assertEquals(exception, mocker.getComponentUnderTest().getLastError());
+        assertEquals(exception, this.wikiManagerScriptService.getLastError());
+        assertEquals("error in getAll", this.logCapture.getMessage(0));
     }
 
     @Test
-    public void getAllIdsError() throws Exception
+    void getAllIdsError() throws Exception
     {
         Exception exception = new WikiManagerException("error in getAllIds");
-        when(wikiDescriptorManager.getAllIds()).thenThrow(exception);
+        when(this.wikiDescriptorManager.getAllIds()).thenThrow(exception);
 
-        Collection<String> result = mocker.getComponentUnderTest().getAllIds();
+        Collection<String> result = this.wikiManagerScriptService.getAllIds();
         assertTrue(result.isEmpty());
-        assertEquals(exception, mocker.getComponentUnderTest().getLastError());
+        assertEquals(exception, this.wikiManagerScriptService.getLastError());
+        assertEquals("error in getAllIds", this.logCapture.getMessage(0));
     }
 
     @Test
-    public void exists() throws Exception
+    void exists() throws Exception
     {
-        when(wikiDescriptorManager.exists("wikiId")).thenReturn(true);
-        when(wikiDescriptorManager.exists("no")).thenReturn(false);
+        when(this.wikiDescriptorManager.exists("wikiId")).thenReturn(true);
+        when(this.wikiDescriptorManager.exists("no")).thenReturn(false);
 
-        assertTrue(mocker.getComponentUnderTest().exists("wikiId"));
-        assertFalse(mocker.getComponentUnderTest().exists("no"));
+        assertTrue(this.wikiManagerScriptService.exists("wikiId"));
+        assertFalse(this.wikiManagerScriptService.exists("no"));
     }
 
     @Test
-    public void existsError() throws Exception
+    void existsError() throws Exception
     {
         Exception exception = new WikiManagerException("error in exists");
-        when(wikiDescriptorManager.exists("wikiId")).thenThrow(exception);
+        when(this.wikiDescriptorManager.exists("wikiId")).thenThrow(exception);
 
-        Boolean result = mocker.getComponentUnderTest().exists("wikiId");
+        Boolean result = this.wikiManagerScriptService.exists("wikiId");
         assertNull(result);
-        assertEquals(exception, mocker.getComponentUnderTest().getLastError());
+        assertEquals(exception, this.wikiManagerScriptService.getLastError());
+        assertEquals("error in exists", this.logCapture.getMessage(0));
     }
 
     @Test
-    public void idAvailable() throws Exception
+    void idAvailable() throws Exception
     {
-        when(wikiManager.idAvailable("wikiId")).thenReturn(true);
-        when(wikiManager.idAvailable("no")).thenReturn(false);
+        when(this.wikiManager.idAvailable("wikiId")).thenReturn(true);
+        when(this.wikiManager.idAvailable("no")).thenReturn(false);
 
-        assertTrue(mocker.getComponentUnderTest().idAvailable("wikiId"));
-        assertFalse(mocker.getComponentUnderTest().idAvailable("no"));
+        assertTrue(this.wikiManagerScriptService.idAvailable("wikiId"));
+        assertFalse(this.wikiManagerScriptService.idAvailable("no"));
     }
 
     @Test
-    public void idAvailableError() throws Exception
+    void idAvailableError() throws Exception
     {
         Exception exception = new WikiManagerException("error in idAvailable");
-        when(wikiManager.idAvailable("wikiId")).thenThrow(exception);
+        when(this.wikiManager.idAvailable("wikiId")).thenThrow(exception);
 
-        Boolean result = mocker.getComponentUnderTest().idAvailable("wikiId");
+        Boolean result = this.wikiManagerScriptService.idAvailable("wikiId");
         assertNull(result);
-        assertEquals(exception, mocker.getComponentUnderTest().getLastError());
-        assertEquals(exception, mocker.getComponentUnderTest().getLastException());
+        assertEquals(exception, this.wikiManagerScriptService.getLastError());
+        assertEquals(exception, this.wikiManagerScriptService.getLastException());
+        assertEquals("error in idAvailable", this.logCapture.getMessage(0));
     }
 
     @Test
-    public void getMainWikiDescriptor() throws Exception
+    void getMainWikiDescriptor() throws Exception
     {
         WikiDescriptor descriptor = new WikiDescriptor("mainWiki", "wikiAlias");
-        when(wikiDescriptorManager.getMainWikiDescriptor()).thenReturn(descriptor);
+        when(this.wikiDescriptorManager.getMainWikiDescriptor()).thenReturn(descriptor);
 
-        WikiDescriptor result = mocker.getComponentUnderTest().getMainWikiDescriptor();
+        WikiDescriptor result = this.wikiManagerScriptService.getMainWikiDescriptor();
         assertEquals(descriptor, result);
     }
 
     @Test
-    public void getMainWikiDescriptorError() throws Exception
+    void getMainWikiDescriptorError() throws Exception
     {
         Exception exception = new WikiManagerException("error in getMainWikiDescriptor");
-        when(wikiDescriptorManager.getMainWikiDescriptor()).thenThrow(exception);
+        when(this.wikiDescriptorManager.getMainWikiDescriptor()).thenThrow(exception);
 
-        WikiDescriptor result = mocker.getComponentUnderTest().getMainWikiDescriptor();
+        WikiDescriptor result = this.wikiManagerScriptService.getMainWikiDescriptor();
         assertNull(result);
-        assertEquals(exception, mocker.getComponentUnderTest().getLastError());
+        assertEquals(exception, this.wikiManagerScriptService.getLastError());
+        assertEquals("error in getMainWikiDescriptor", this.logCapture.getMessage(0));
     }
 
     @Test
-    public void getMainWikiId() throws Exception
+    void getMainWikiId()
     {
-        String result = mocker.getComponentUnderTest().getMainWikiId();
+        String result = this.wikiManagerScriptService.getMainWikiId();
         assertEquals("mainWiki", result);
     }
 
     @Test
-    public void getCurrentWikiId() throws Exception
+    void getCurrentWikiId() throws Exception
     {
-        when(wikiDescriptorManager.getCurrentWikiId()).thenReturn("currentWiki");
-        String result = mocker.getComponentUnderTest().getCurrentWikiId();
+        when(this.wikiDescriptorManager.getCurrentWikiId()).thenReturn("currentWiki");
+        String result = this.wikiManagerScriptService.getCurrentWikiId();
         assertEquals("currentWiki", result);
     }
 
     @Test
-    public void saveDescriptorWhenICanEditDescriptorDocument() throws Exception
+    void saveDescriptorWhenICanEditDescriptorDocument() throws Exception
     {
         WikiDescriptor oldDescriptor = new WikiDescriptor("wikiId", "wikiAlias");
         oldDescriptor.setOwnerId("SomeUser");
-        when(wikiDescriptorManager.getById(oldDescriptor.getId())).thenReturn(oldDescriptor);
+        when(this.wikiDescriptorManager.getById(oldDescriptor.getId())).thenReturn(oldDescriptor);
 
         DocumentReference wikiDescriptorDocRef = getAndSetupDescriptorDocument(oldDescriptor.getId());
-        when(this.authorizationManager.hasAccess(Right.EDIT, currentUserRef, wikiDescriptorDocRef)).thenReturn(true);
+        when(this.authorizationManager.hasAccess(Right.EDIT, this.currentUserRef, wikiDescriptorDocRef))
+            .thenReturn(true);
 
         // Changing some value, not the owner.
         WikiDescriptor descriptor = new WikiDescriptor(oldDescriptor.getId(), "wikiAlias");
         descriptor.setOwnerId(oldDescriptor.getOwnerId());
-        boolean result = mocker.getComponentUnderTest().saveDescriptor(descriptor);
+        boolean result = this.wikiManagerScriptService.saveDescriptor(descriptor);
         assertTrue(result);
 
         // The descriptor has been saved
-        verify(wikiDescriptorManager).saveDescriptor(descriptor);
+        verify(this.wikiDescriptorManager).saveDescriptor(descriptor);
     }
 
     @Test
-    public void saveDescriptorWhenIAmOwner() throws Exception
+    void saveDescriptorWhenIAmOwner() throws Exception
     {
         WikiDescriptor oldDescriptor = mock(WikiDescriptor.class);
         when(oldDescriptor.getId()).thenReturn("wikiId");
         when(oldDescriptor.getOwnerId()).thenReturn("mainWiki:XWiki.User");
-        when(wikiDescriptorManager.getById(oldDescriptor.getId())).thenReturn(oldDescriptor);
+        when(this.wikiDescriptorManager.getById(oldDescriptor.getId())).thenReturn(oldDescriptor);
 
         // Changing some value, not the owner.
         WikiDescriptor descriptor = new WikiDescriptor(oldDescriptor.getId(), "wikiAlias");
         descriptor.setOwnerId(oldDescriptor.getOwnerId());
-        boolean result = mocker.getComponentUnderTest().saveDescriptor(descriptor);
+        boolean result = this.wikiManagerScriptService.saveDescriptor(descriptor);
         assertTrue(result);
 
         // The owner of the old descriptor was verified (once by us, once by the call).
         verify(oldDescriptor, times(2)).getOwnerId();
 
         // The descriptor has been saved
-        verify(wikiDescriptorManager).saveDescriptor(descriptor);
+        verify(this.wikiDescriptorManager).saveDescriptor(descriptor);
     }
 
     @Test
-    public void saveDescriptorWhenIAmLocalAdmin() throws Exception
+    void saveDescriptorWhenIAmLocalAdmin() throws Exception
     {
         WikiDescriptor oldDescriptor = new WikiDescriptor("wikiId", "wikiAlias");
         oldDescriptor.setOwnerId("SomeUser");
-        when(wikiDescriptorManager.getById(oldDescriptor.getId())).thenReturn(oldDescriptor);
+        when(this.wikiDescriptorManager.getById(oldDescriptor.getId())).thenReturn(oldDescriptor);
 
         // Local admin.
-        when(authorizationManager.hasAccess(eq(Right.ADMIN), eq(currentUserRef), eq(new WikiReference("wikiId"))))
-            .thenReturn(true);
+        when(this.authorizationManager.hasAccess(eq(Right.ADMIN), eq(this.currentUserRef),
+            eq(new WikiReference("wikiId")))).thenReturn(true);
 
         // Changing some value, not the owner.
         WikiDescriptor descriptor = new WikiDescriptor(oldDescriptor.getId(), "wikiAlias");
         descriptor.setOwnerId(oldDescriptor.getOwnerId());
-        boolean result = mocker.getComponentUnderTest().saveDescriptor(descriptor);
+        boolean result = this.wikiManagerScriptService.saveDescriptor(descriptor);
         assertTrue(result);
 
         // The right has been checked
-        verify(authorizationManager).hasAccess(eq(Right.ADMIN), eq(currentUserRef), eq(new WikiReference("wikiId")));
+        verify(this.authorizationManager).hasAccess(eq(Right.ADMIN), eq(this.currentUserRef),
+            eq(new WikiReference("wikiId")));
         // The descriptor has been saved
-        verify(wikiDescriptorManager).saveDescriptor(descriptor);
+        verify(this.wikiDescriptorManager).saveDescriptor(descriptor);
     }
 
     @Test
-    public void saveDescriptorWhenIAmNotOwnerNorLocalAdminNorGlobalAdmin() throws Exception
+    void saveDescriptorWhenIAmNotOwnerNorLocalAdminNorGlobalAdmin() throws Exception
     {
         WikiDescriptor oldDescriptor = new WikiDescriptor("wikiId", "wikiAlias");
         oldDescriptor.setOwnerId("SomeUser");
-        when(wikiDescriptorManager.getById(oldDescriptor.getId())).thenReturn(oldDescriptor);
+        when(this.wikiDescriptorManager.getById(oldDescriptor.getId())).thenReturn(oldDescriptor);
 
-        when(authorizationManager.hasAccess(eq(Right.ADMIN), eq(currentUserRef), eq(new WikiReference("wikiId"))))
-            .thenReturn(false);
+        when(this.authorizationManager.hasAccess(eq(Right.ADMIN), eq(this.currentUserRef),
+            eq(new WikiReference("wikiId")))).thenReturn(false);
 
         // Changing some value, not the owner.
         WikiDescriptor descriptor = new WikiDescriptor(oldDescriptor.getId(), "wikiAlias");
         oldDescriptor.setOwnerId(oldDescriptor.getOwnerId());
-        boolean result = mocker.getComponentUnderTest().saveDescriptor(descriptor);
+        boolean result = this.wikiManagerScriptService.saveDescriptor(descriptor);
         assertFalse(result);
 
         // The descriptor has not been saved
-        verify(wikiDescriptorManager, never()).saveDescriptor(descriptor);
+        verify(this.wikiDescriptorManager, never()).saveDescriptor(descriptor);
 
-        Exception exception = new AccessDeniedException(currentUserRef, new WikiReference("wikiId"));
-        assertEquals(exception.getMessage(), mocker.getComponentUnderTest().getLastError().getMessage());
-        assertEquals(exception.getClass(), mocker.getComponentUnderTest().getLastError().getClass());
+        String expectedMessage = "Access denied when checking  access to [Wiki wikiId] for user [mainWiki:XWiki.User]";
+        assertEquals(expectedMessage, this.wikiManagerScriptService.getLastError().getMessage());
+        assertEquals(AccessDeniedException.class, this.wikiManagerScriptService.getLastError().getClass());
+        assertEquals(expectedMessage, this.logCapture.getMessage(0));
     }
 
     @Test
-    public void saveDescriptorWhenIAmLocalAdminAndChangeOwner() throws Exception
+    void saveDescriptorWhenIAmLocalAdminAndChangeOwner() throws Exception
     {
         WikiDescriptor oldDescriptor = new WikiDescriptor("wikiId", "wikiAlias");
         oldDescriptor.setOwnerId("SomeUser");
-        when(wikiDescriptorManager.getById(oldDescriptor.getId())).thenReturn(oldDescriptor);
+        when(this.wikiDescriptorManager.getById(oldDescriptor.getId())).thenReturn(oldDescriptor);
 
         // Changing the owner.
         WikiDescriptor descriptor = new WikiDescriptor(oldDescriptor.getId(), "wikiAlias");
         descriptor.setOwnerId("SomeOtherUserOrMyself");
-        boolean result = mocker.getComponentUnderTest().saveDescriptor(descriptor);
+        boolean result = this.wikiManagerScriptService.saveDescriptor(descriptor);
         assertFalse(result);
 
         // The right has been checked
-        verify(authorizationManager).hasAccess(eq(Right.ADMIN), eq(currentUserRef), eq(new WikiReference("wikiId")));
+        verify(this.authorizationManager).hasAccess(eq(Right.ADMIN), eq(this.currentUserRef),
+            eq(new WikiReference("wikiId")));
 
         // The descriptor has not been saved
-        verify(wikiDescriptorManager, never()).saveDescriptor(descriptor);
+        verify(this.wikiDescriptorManager, never()).saveDescriptor(descriptor);
 
-        Exception expectedException = new AccessDeniedException(currentUserRef, new WikiReference("wikiId"));
-        assertEquals(expectedException.getMessage(), mocker.getComponentUnderTest().getLastError().getMessage());
-        assertEquals(expectedException.getClass(), mocker.getComponentUnderTest().getLastError().getClass());
+        String expectedMessage = "Access denied when checking  access to [Wiki wikiId] for user [mainWiki:XWiki.User]";
+        assertEquals(expectedMessage, this.wikiManagerScriptService.getLastError().getMessage());
+        assertEquals(AccessDeniedException.class, this.wikiManagerScriptService.getLastError().getClass());
+        assertEquals(expectedMessage, this.logCapture.getMessage(0));
     }
 
     @Test
-    public void saveDescriptorWhenICanEditDescriptorDocumentAndChangeOwner() throws Exception
+    void saveDescriptorWhenICanEditDescriptorDocumentAndChangeOwner() throws Exception
     {
         WikiDescriptor oldDescriptor = new WikiDescriptor("wikiId", "wikiAlias");
         oldDescriptor.setOwnerId("SomeUser");
-        when(wikiDescriptorManager.getById(oldDescriptor.getId())).thenReturn(oldDescriptor);
+        when(this.wikiDescriptorManager.getById(oldDescriptor.getId())).thenReturn(oldDescriptor);
 
         DocumentReference wikiDescriptorDocRef = getAndSetupDescriptorDocument(oldDescriptor.getId());
-        when(this.authorizationManager.hasAccess(Right.EDIT, currentUserRef, wikiDescriptorDocRef)).thenReturn(true);
+        when(this.authorizationManager.hasAccess(Right.EDIT, this.currentUserRef, wikiDescriptorDocRef))
+            .thenReturn(true);
 
         // Changing the owner is possible, since I can directly edit the wiki descriptor anyway.
         WikiDescriptor descriptor = new WikiDescriptor(oldDescriptor.getId(), "wikiAlias");
         descriptor.setOwnerId("SomeOtherUserOrMyself");
-        boolean result = mocker.getComponentUnderTest().saveDescriptor(descriptor);
+        boolean result = this.wikiManagerScriptService.saveDescriptor(descriptor);
         assertTrue(result);
 
         // The descriptor has been saved
-        verify(wikiDescriptorManager).saveDescriptor(descriptor);
+        verify(this.wikiDescriptorManager).saveDescriptor(descriptor);
     }
 
     @Test
-    public void saveDescriptorWhenDescriptorDidNotExist() throws Exception
+    void saveDescriptorWhenDescriptorDidNotExist() throws Exception
     {
         WikiDescriptor descriptor = new WikiDescriptor("wikiId", "wikiAlias");
-        boolean result = mocker.getComponentUnderTest().saveDescriptor(descriptor);
+        boolean result = this.wikiManagerScriptService.saveDescriptor(descriptor);
         assertFalse(result);
 
         // Verify the rights have been checked
-        verify(authorizationManager).hasAccess(eq(Right.ADMIN), eq(currentUserRef), eq(new WikiReference("mainWiki")));
+        verify(this.authorizationManager).hasAccess(eq(Right.ADMIN), eq(this.currentUserRef),
+            eq(new WikiReference("mainWiki")));
 
         // The descriptor has not been saved
-        verify(wikiDescriptorManager, never()).saveDescriptor(descriptor);
+        verify(this.wikiDescriptorManager, never()).saveDescriptor(descriptor);
+
+        assertEquals("Access denied when checking  access to [Wiki wikiId] for user [mainWiki:XWiki.User]",
+            this.logCapture.getMessage(0));
     }
 
     @Test
-    public void saveDescriptorWhenDescriptorDidNotExistAndIAmGlobalAdmin() throws Exception
+    void saveDescriptorWhenDescriptorDidNotExistAndIAmGlobalAdmin() throws Exception
     {
-        when(this.authorizationManager.hasAccess(Right.ADMIN, currentUserRef, new WikiReference("mainWiki")))
+        when(this.authorizationManager.hasAccess(Right.ADMIN, this.currentUserRef, new WikiReference("mainWiki")))
             .thenReturn(true);
 
         WikiDescriptor descriptor = new WikiDescriptor("wikiId", "wikiAlias");
-        boolean result = mocker.getComponentUnderTest().saveDescriptor(descriptor);
+        boolean result = this.wikiManagerScriptService.saveDescriptor(descriptor);
         assertTrue(result);
 
         // Verify the rights have been checked
-        verify(authorizationManager).hasAccess(eq(Right.ADMIN), eq(currentUserRef), eq(new WikiReference("mainWiki")));
+        verify(this.authorizationManager).hasAccess(eq(Right.ADMIN), eq(this.currentUserRef),
+            eq(new WikiReference("mainWiki")));
 
         // The descriptor has been saved
-        verify(wikiDescriptorManager).saveDescriptor(descriptor);
+        verify(this.wikiDescriptorManager).saveDescriptor(descriptor);
     }
 
     @Test
-    public void isPathMode() throws Exception
+    void isPathMode()
     {
-        when(standardURLConfiguration.isPathBasedMultiWiki()).thenReturn(true);
-        assertTrue(mocker.getComponentUnderTest().isPathMode());
+        when(this.standardURLConfiguration.isPathBasedMultiWiki()).thenReturn(true);
+        assertTrue(this.wikiManagerScriptService.isPathMode());
 
-        when(standardURLConfiguration.isPathBasedMultiWiki()).thenReturn(false);
-        assertFalse(mocker.getComponentUnderTest().isPathMode());
+        when(this.standardURLConfiguration.isPathBasedMultiWiki()).thenReturn(false);
+        assertFalse(this.wikiManagerScriptService.isPathMode());
     }
 
     @Test
-    public void getAliasSuffix() throws Exception
+    void getAliasSuffix()
     {
-        when(wikiConfiguration.getAliasSuffix()).thenReturn("mysuffix.org");
-        assertEquals(mocker.getComponentUnderTest().getAliasSuffix(), "mysuffix.org");
+        when(this.wikiConfiguration.getAliasSuffix()).thenReturn("mysuffix.org");
+        assertEquals("mysuffix.org", this.wikiManagerScriptService.getAliasSuffix());
     }
 
     @Test
-    public void getCurrentDescriptor() throws Exception
+    void getCurrentDescriptor() throws Exception
     {
-        mocker.getComponentUnderTest().getCurrentWikiDescriptor();
+        this.wikiManagerScriptService.getCurrentWikiDescriptor();
 
-        verify(wikiDescriptorManager).getCurrentWikiDescriptor();
+        verify(this.wikiDescriptorManager).getCurrentWikiDescriptor();
     }
 }
